--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,26 +1,25 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>ログインページ</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
-    <link rel="stylesheet" href="/style.css" type="text/css">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head_fragment(title, scripts, links)">
+    <title>勤怠管理システム</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <meta charset="utf-8" />
 </head>
 <body>
-<h1>ログインできないログインページ</h1>
-<h4>ログインID</h4>
-<input type="text" id="id">
-<h4>パスワード</h4>
-<input type="password" id="password">
-<p>
-<select name="User">
-    <option value="user">一般</option>
-    <option value="manage">管理</option>
-</select>
-</p>
-<p>
-    <a href="attendanceList">ログイン</a>
+<div class="container">
+    <form class="form-signin" method="post" th:action="@{/login}">
+        <div class="alert alert-dismissible alert-danger" th:if="${errorMessage}">
+            <p th:text="${errorMessage}"></p>
+        </div>
+        <h2 class="form-signin-heading">ログイン</h2>
+        <label for="username" class="sr-only">ユーザーネーム</label>
+        <input type="text" id="username" name="username" class="form-control" placeholder="UserName"/>
+        <label for="password" class="sr-only">パスワード</label>
+        <input type="password" id="password" name="password" class="form-control" placeholder="Password"/>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">ログイン</button>
+    </form>
+</div>
 </body>
 </html>
