--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,18 +9,19 @@
     <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
-<h1>ログインできないログインページ</h1>
-<h4>ログインID</h4>
-<input type="text" id="id">
-<h4>パスワード</h4>
-<input type="password" id="password">
-<p>
-<select name="User">
-    <option value="user">一般</option>
-    <option value="manage">管理</option>
-</select>
-</p>
-<p>
-    <a href="attendanceList">ログイン</a>
+    <div style="text-align: center;">
+        <h1>ログイン!</h1>
+        <h4>ログインID</h4>
+        <input type="text" id="id">
+        <h4>パスワード</h4>
+        <input type="password" id="pass">
+        <p>
+        <select name="User">
+            <option value="user">一般</option>
+            <option value="manage">管理</option>
+        </select>
+        </p>
+        <a href="attendanceList">ログイン</a>
+    </div>
 </body>
 </html>
