--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -46,6 +46,10 @@ p {
    color:#ffffff;
    font-size: 18px;
 }
+a {
+   color:#ffffff;
+   font-size: 18px;
+}
 .modalclick {
   color:#000000;
   font-size: 20px;
