--- a/src/main/resources/templates/jokyoList.html
+++ b/src/main/resources/templates/jokyoList.html
@@ -49,7 +49,7 @@ function updateCurrentDateTime() {
             <td th:text="${attendance.end_time}"></td>
             <td th:text="${attendance.break_start}"></td>
             <td th:text="${attendance.break_end}"></td>
-            <td >合計時間は現在作成中</td>
+            <td th:text="${attendance.totaltime}"></td>
             <!--<td th:text="${totalTime(attendance.start_time, attendance.end_time, attendance.break_start, attendance.break_end)}"></td> -->
         </tr>
     </th:block>
