--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -73,7 +73,7 @@
             </script>
         </h2>
     </div>
-    <h3>株式会社 ヒューマンアカデミ、{{ username }} さん</h3>
+    <h3>株式会社 ヒューマンアカデミー</h3>
     <dialog>
         <table height="150">
             <tr>
@@ -122,7 +122,7 @@
     <table style="margin:auto">
         <tr>
             <th colspan="2">
-                <p>こんにちは！今日も頑張って下さい！</p>
+                <p id="underbar">こんにちは！今日も頑張って下さい！</p>
             </th>
         </tr>
         <!--<tr>
@@ -153,7 +153,7 @@
             <th>
                 <form id="startform" method="post" action="/attendanceInput">
                     <button type="button" class="start_time" name="start_time" value="realtime" onclick="start()">　出勤　</button><br>
-                    <select name="userId">
+                    <!--<select name="userId">
                         <option value="1">ユーザー1</option>
                         <option value="2">ユーザー2</option>
                         <option value="3">ユーザー3</option>
@@ -164,13 +164,13 @@
                         <option value="8">ユーザー8</option>
                         <option value="9">ユーザー9</option>
                         <option value="10">ユーザー10</option>
-                    </select>
+                    </select>-->
                 </form>
             </th>
             <th>
                 <form id="endform" method="post" action="/attendanceEnd">
                     <button type="button" class="end_time" name="end_time" value="realtime" onclick="end()">　退勤　</button><br>
-                    <select name="userId">
+                    <!--<select name="userId">
                         <option value="1">ユーザー1</option>
                         <option value="2">ユーザー2</option>
                         <option value="3">ユーザー3</option>
@@ -181,13 +181,13 @@
                         <option value="8">ユーザー8</option>
                         <option value="9">ユーザー9</option>
                         <option value="10">ユーザー10</option>
-                    </select>
+                    </select>-->
                 </form>
             </th>
             <th>
                 <form id="breakstart" method="post" action="/attendanceBreakStart">
                     <button type="button" class="break_start" name="break_start" value="realtime" onclick="breakstart()">休憩開始</button><br>
-                    <select name="userId">
+                    <!--<select name="userId">
                         <option value="1">ユーザー1</option>
                         <option value="2">ユーザー2</option>
                         <option value="3">ユーザー3</option>
@@ -198,13 +198,13 @@
                         <option value="8">ユーザー8</option>
                         <option value="9">ユーザー9</option>
                         <option value="10">ユーザー10</option>
-                    </select>
+                    </select>-->
                 </form>
             </th>
             <th>
                 <form id="breakend" method="post" action="/attendanceBreakEnd">
                     <button type="button" class="break_end" name="break_end" value="realtime" onclick="breakend()">休憩終了</button><br>
-                    <select name="userId">
+                    <!--<select name="userId">
                         <option value="1">ユーザー1</option>
                         <option value="2">ユーザー2</option>
                         <option value="3">ユーザー3</option>
@@ -215,7 +215,7 @@
                         <option value="8">ユーザー8</option>
                         <option value="9">ユーザー9</option>
                         <option value="10">ユーザー10</option>
-                    </select>
+                    </select>-->
                 </form>
             </th>
         </tr>
