--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -53,7 +53,7 @@
 
 <body>
     <div style="text-align: center">
-        <h1>勤怠管理「AttendanceManage」</h1>
+        <h1>勤怠管理「Time Manager」</h1>
         <h2>
             <div id="current_date"></div>
             <script>
@@ -84,6 +84,16 @@
             <tr>
                 <th>
                     <a href="jokyoList" class="modalclick">勤怠状況一覧表示</a>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <a href="place" class="modalclick">勤務場所登録</a>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <a href="contactAddress" class="modalclick">連絡先登録</a>
                 </th>
             </tr>
             <tr>
@@ -122,7 +132,7 @@
     <table style="margin:auto">
         <tr>
             <th colspan="2">
-                <p id="underbar">こんにちは！今日も頑張って下さい！</p>
+                <h4 id="underbar">こんにちは！今日も頑張って下さい！</h4>
             </th>
         </tr>
         <!--<tr>
