--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div style="text-align: center">
-        <h1>勤怠管理「AttendanceManage」</h1>
+        <h1>勤怠管理「Time Manager」</h1>
         <h2 class="form-signin-heading">User Management System</h2>
     </div>
 
