--- a/src/main/resources/templates/contactAddress.html
+++ b/src/main/resources/templates/contactAddress.html
@@ -9,15 +9,93 @@
         <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
-<h1>連絡先登録</h1>
-<h4>連絡先登録したほうが良いらしいですよ！</h4>
-<p>電話番号　　　
-    <input type="text" id="tel"></p>
-<p>メールアドレス
-    <input type="text" id="mail"></p>
-<p>備考　　　　　
-    <input type="text" id="memo"></p>
-<p>
-    <a href="attendanceList">戻ろう</a>
+    <div style="text-align: center">
+        <h1>勤怠管理「Time Manager」</h1>
+        <h2>
+            <div id="current_date"></div>
+            <script>
+                function updateCurrentDateTime() {
+                    const currentDateElement = document.getElementById("current_date");
+                    const now = new Date();
+                    const year = now.getFullYear();
+                    const month = (now.getMonth() + 1).toString().padStart(2, '0');
+                    const day = now.getDate().toString().padStart(2, '0');
+                    const hour = now.getHours().toString().padStart(2, '0');
+                    const minute = now.getMinutes().toString().padStart(2, '0');
+                    const second = now.getSeconds().toString().padStart(2, '0');
+                    currentDateElement.innerHTML = `${year}/${month}/${day} ${hour}:${minute}:${second}`;
+                }
+                setInterval(updateCurrentDateTime, 1000);
+                updateCurrentDateTime();
+            </script>
+        </h2>
+    </div>
+    <h3>株式会社 ヒューマンアカデミー</h3>
+    <dialog>
+        <table height="150">
+            <tr>
+                <th>
+                    <h4 class="black">メニュー</h4>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <a href="jokyoList" class="modalclick">勤怠状況一覧表示</a>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <a href="place" class="modalclick">勤務場所登録</a>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <a href="contactAddress" class="modalclick">連絡先登録</a>
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <a href="login" class="modalclick">ログアウト</a>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    <div style="text-align: center;">
+                        <button id="close" class="close"> 閉じる</button>
+                    </div>
+                </td>
+            </tr>
+        </table>
+    </dialog>
+    <!-- モーダルウィンドウ内を開くボタンの指定 -->
+    <div style="text-align: right;">
+        <button id="open" class="open">メニュー</button>
+    </div>
+
+    <script>
+        let dialog = document.querySelector('dialog'); // dialog（モーダルダイアログ）の宣言
+        let btn_open = document.getElementById('open'); // open（開く）ボタンの宣言
+        let btn_close = document.getElementById('close'); // close（閉じる）ボタンの宣言
+        btn_open.addEventListener('click', function() {
+        // 開くボタンをクリックした場合の処理
+        dialog.showModal();
+        }, false);
+        btn_close.addEventListener('click', function() {
+        // 閉じるボタンをクリックした場合の処理
+        dialog.close();
+        }, false);
+    </script>
+    <div style="text-align: center">
+        <h4>連絡先登録</h4>
+        <p>電話番号　　　
+            <input type="text" id="tel"></p>
+        <p>メールアドレス
+            <input type="text" id="mail"></p>
+        <p>備考　　　　　
+            <input type="text" id="memo"></p>
+        <p>
+            <a href="attendanceList">戻る</a>
+        </p>
+    </div>
 </body>
 </html>
