--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -132,7 +132,7 @@
     <table style="margin:auto">
         <tr>
             <th colspan="2">
-                <h4 id="underbar">こんにちは！今日も頑張って下さい！</h4>
+                <h4>こんにちは！今日も頑張って下さい！</h4>
             </th>
         </tr>
         <!--<tr>
