--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -83,6 +83,11 @@
             </tr>
             <tr>
                 <th>
+                    <a href="attendanceList" class="modalclick">ホーム</a>
+                </th>
+            </tr>
+            <tr>
+                <th>
                     <a href="jokyoList" class="modalclick">勤怠状況一覧表示</a>
                 </th>
             </tr>
