--- a/src/main/resources/templates/attendanceList.html
+++ b/src/main/resources/templates/attendanceList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>マイレコーダー</title>
+    <title>勤怠管理「Time Manager」</title>
     <mata charste="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
