--- a/src/main/resources/templates/jokyoList.html
+++ b/src/main/resources/templates/jokyoList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>出勤ボタンページ</title>
+    <title>勤怠状況一覧表示｜Time Manager</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="/style.css" type="text/css">
