--- a/src/main/resources/templates/place.html
+++ b/src/main/resources/templates/place.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>勤務場所登録</title>
+    <title>勤務場所登録｜Time Manager</title>
     <meta charste="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
