--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -2,6 +2,7 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
     <mata charste="utf-8">
+        <title>ユーザーマネージメント｜Time Manager</title>
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="/style.css" type="text/css">
